--- a/CompletedCourses/CompletedCourses.csproj
+++ b/CompletedCourses/CompletedCourses.csproj
@@ -55,6 +55,11 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Model\Student.cs" />
+    <Page Include="CompletedCoursesWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -63,12 +68,19 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="CompletedCoursesWindow.xaml.cs">
+      <DependentUpon>CompletedCoursesWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Model\Course.cs" />
+    <Compile Include="Model\DataLayer.cs" />
+    <Compile Include="Model\GradeScheme.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PlusToSymbolConverter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -86,6 +98,9 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="Properties\DataSources\CompletedCourses.Model.Course.datasource" />
+    <None Include="Properties\DataSources\CompletedCourses.Model.DataLayer.datasource" />
+    <None Include="Properties\DataSources\CompletedCourses.Model.Student.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
